has the latest Windows patches and/or download this:

https://www.microsoft.com/en-us/download/details.aspx?id=48145

This might also help with other hard crashes.

If this does not help, or if you see a black screen, try starting Mnemosyne
with the --qt-opengl=desktop command line argument.)

Mnemosyne 2.7.3

- Make tag completion case insensitive (requested by Daniel Schmidt).
- Don't forget to update whether or not a card is active when bulk adding/
  removing tags in the card browser.
- Make Anki import more robust (bug reported by Максим).
- Don't crash when saving text-to-speech containing linebreaks.
- Fix corner cases of scheduled counter not updating when learning ahead of
  schedule and switching between saved sets (bug reported by girlsim).
- Updated translations.
- More robust importing under Linux.
- Upgraded to gTTS 2.1.2 and googletrans 3.0.0.
- Added command line option --qt-scale-factor, to tweak the size on HDPI
  displays.


Mnemosyne 2.7.2: 2020-07-09

- Wrap tag string so that it no longer stretches the application window.
- Don't crash when using saved sets containing over 1000 tags (reported
  by abacus).
- Android: don't crash when trying to star a card when no card is showing.
- Improve robustness of Windows sync server.
- Enabled Icelandic text-to-speech.
- More robust detection of Latex on OSX (patch by Devin Howard).
- Exposed more functionality of libmnemosyne to scripting programs.
- Update example plugin to change keyboard shortcuts (requested by Garrison
  Taylor).
- Upgraded to PyQt 5.15.0, matplotlib 3.2.2.


Mnemosyne 2.7.1: 2020-02-20

- Improved Google Translate results.
- Fixed a regression in the sync protocol when Mnemosyne had warned about
  learning too many new cards.
- Improved support for OpenGL emulation libraries on older hardware.
- No longer give a Matplotlib warning when plotting statistics.
- Many cleanups in the code by Cole Robinson.
- Improve Python 3.8 compatibility (patch by hal50000).

